rust/crates/diskplan-cli/src/tui/snapshots/diskplan__tui__render__tests__execution_preview_warnings_80x24.snap
---
source: rust/crates/diskplan-cli/src/tui/render.rs
expression: execution_snapshot
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ diskplan Immutable plan  •  Paused                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Plan-first • Execution Preview ──────────────────────────────────────────────┐
│Plan plan-runtime-0001 • 1 staged                                             │
│FINAL WARNING final-force • engine finalized force and residual path-race war…│
│Engine-issued ordered action review and postconditions                        │
│Displayed commands and argv come from the engine and are never composed by th…│
│1. unit unit-remove-cache • Remove cache as one engine execution unit • postc…│
│covers logical action action-cache-1                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
j/k move  Enter/l expand  h collapse  Space stage  p plan  f filter  ? or / help
immutable engine plan ready
