rust/crates/diskplan-cli/src/tui/snapshots/diskplan__tui__render__tests__plan_40x12.snap
---
source: rust/crates/diskplan-cli/src/tui/render.rs
expression: "snapshot(&state, 40, 12)"
---
┌──────────────────────────────────────┐
│ diskplan Provisional plan  •  Provisi│
└──────────────────────────────────────┘
┌ Plan-first summary ──────────────────┐
│11 actions                            │
│1.2 GiB immediate                     │
│256.0 MiB shared unlock               │
│Ready • 8 • ready                     │
└──────────────────────────────────────┘
────────────────────────────────────────
q cancel  r resume + invalidate  F freez
provisional plan ready
