rust/crates/diskplan-cli/src/tui/snapshots/diskplan__tui__render__tests__runtime_plan_120x34.snap
---
source: rust/crates/diskplan-cli/src/tui/render.rs
expression: "snapshot(&state, 120, 34)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ diskplan Immutable plan  •  Paused                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Plan-first • Summary ────────────────────────────────────────────────────────────────────────────────────────────────┐
│Plan plan-runtime-0001 • 1 staged                                                                                     │
│Decision Plan/action                         Immediate      Shared Activity Recovery      Status                      │
│▾ Ready                                                                                                               │
│▾ Generic remove                                                                                                      │
│>[x]           Remove rebuildable cache        1.0 GiB     unknown inactive rebuildable   staged • path race residual…│
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
j/k move  Enter/l expand  h collapse  Space stage  p plan  f filter  ? or / help
immutable engine plan ready
