rust/crates/diskplan-cli/src/tui/snapshots/diskplan__tui__render__tests__scan_40x12.snap
---
source: rust/crates/diskplan-cli/src/tui/render.rs
expression: "snapshot(&state, 40, 12)"
---
┌──────────────────────────────────────┐
│ diskplan Read-only scan  •  Running  │
└──────────────────────────────────────┘
┌ Engine facts ────────────────────────┐
│standard • 1:23                       │
│825431 entries • 9945/s               │
│37602 dirs • 148 retained             │
│23.0 GiB observed • evidence only     │
└──────────────────────────────────────┘
────────────────────────────────────────
q cancel  Space pause/resume  p provisio
scan is running
