rust/crates/diskplan-cli/src/tui/snapshots/diskplan__tui__render__tests__scan_80x24.snap
---
source: rust/crates/diskplan-cli/src/tui/render.rs
expression: "snapshot(&state, 80, 24)"
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ diskplan Read-only scan  •  Running                                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Engine facts ────────────────────────────────────────────────────────────────┐
│standard  1:23  9945/s                                                        │
│825431 entries  37602 dirs  148 retained                                      │
│Observed 23.0 GiB  Evidence only                                              │
│Roots 4 complete / 1 partial  Budget 2000000                                  │
│Root /Users/example/Library/Caches/com.example                                │
│No completion percentage                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
q cancel  Space pause/resume  p provisional plan  ? or / help
scan is running
